# lekhani

./: .gitignore  AGENTS.md  Cargo.toml  ELM_NARRATIVE_RUNTIME_PLAN.md  Makefile  README.md  REFINED_PLAN.md  Trunk.toml  humanities-14-00193-v2.txt  index.html
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: lib.rs
frontend/src/api/: dto.rs  mod.rs  tauri.rs
frontend/src/mapping/: mod.rs  screenplay.rs
frontend/src/models/: screenplay.rs
frontend/src/state/: app_mode.rs  document.rs  mod.rs  narrative.rs  screenplays.rs
frontend/src/views/: app.rs  chat.rs  editor.rs  home.rs  mod.rs  shell.rs  timeline.rs
samples/: launch-test.lekhani
scripts/: capture_readme_motion.sh  capture_readme_screenshots.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_normalize_screenplay_changes.sql  0003_sync_control.sql  0004_assistant_memory.sql  0005_story_backlog.sql
src-tauri/src/: lib.rs  lib.rs.backup  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/db/: memory_narrative_repository.rs  memory_repository.rs  mod.rs  sqlite_repository.rs
src-tauri/src/adapters/llm/: fmrs.rs  lmstudio.rs  mod.rs  openai_compatible.rs  stub.rs
src-tauri/src/adapters/mcp/: assistant.rs  document.rs  mod.rs  narrative.rs  ontology.rs  sync.rs
src-tauri/src/adapters/tauri/: commands.rs  dto.rs  mapping.rs  mod.rs  state.rs
src-tauri/src/application/: assistant_turn.rs  drama_manager.rs  mod.rs  narrative_runtime.rs  narrative_service.rs  screenplay_service.rs  sync_coordinator.rs
src-tauri/src/domain/: assistant_memory.rs  error.rs  mod.rs  narrative.rs  narrative_engine.rs  nudge.rs  ontology.rs  screenplay.rs  story_state.rs  sync.rs
src-tauri/src/ports/: assistant_memory_repository.rs  link_repository.rs  lint_repository.rs  llm_ports.rs  mod.rs  mutation_gateway.rs  narrative_generation_gateway.rs  narrative_repository.rs  query_gateway.rs  screenplay_repository.rs  sync_ports.rs  sync_repository.rs
