[workspace]
members = [
    "frontend",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.6", features = ["serde"] }
leptos_meta = "0.6"
leptos_router = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.10" }
