[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["you"]
license = ""
repository = ""
description = "Frontend for Lekhani - Screenplay Writing Tool"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde", "js"] }
chrono = { workspace = true }

wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Window"] }
wasm-bindgen-futures = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
gloo-utils = "0.2"
gloo-timers = "0.3"
