[package]
name = "mathura-struggle"
version = "0.1.0"
description = "Lekhani - Screenplay Writing Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85"

[lib]
name = "mathura_struggle"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["wry", "custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
fm-rs = "0.1.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
